--- a/academic_website/styles/main.css
+++ b/academic_website/styles/main.css
@@ -1316,7 +1316,7 @@
 .navbar .navbar-nav > a.btn {
   border-width: 2px;
   font-weight: 400;
-  font-size: 0.8571em;
+  font-size: 1em;
   line-height: 1.35em;
   margin: 5px 1px;
   border: none;
@@ -1483,9 +1483,13 @@ fieldset[disabled]
 
 .btn.btn-icon.btn-lg,
 .navbar .navbar-nav > a.btn.btn-icon.btn-lg {
-  height: 3.6rem;
+  height: 4rem;
   min-width: 3.6rem;
-  width: 3.6rem;
+  width: 4rem;
+  border-style: solid;
+/*  border-color: #005e5e;*/
+  border-color: white;
+  border-width: 3px;
 }
 
 .btn.btn-icon.btn-lg i.now-ui-icons,
@@ -7058,7 +7062,7 @@ Created using IcoMoon - icomoon.io
 }
 
 .page-header .btn {
-  width: 140px;
+  width: 160px;
 }
 
 /* Profile Image Style */
@@ -7116,8 +7120,8 @@ Created using IcoMoon - icomoon.io
 .cc-profile-image img {
   position: relative;
   border-radius: 50%;
-  height: 180px;
-  width: 180px;
+  height: 230px;
+  width: 230px;
   padding: 0;
   margin: 0;
   border: 15px solid transparent;
@@ -7138,7 +7142,7 @@ Created using IcoMoon - icomoon.io
 
 /* Profile Page Social button Style */
 .button-container .btn-default {
-  margin-right: 8px;
+  margin-right: 20px;
 }
 
 /* Professional Skills Style */
@@ -7275,4 +7279,24 @@ a.credit {
 /* Common Style */
 .section {
   padding-bottom: 0;
+}
+
+.paper-background-image {
+  background-size: cover;
+  padding-right: 0px;
+  background-repeat: no-repeat;  
+  background-origin: content-box;
+}
+
+#street-paper-img {
+  background-image: url("../images/street_paper_background.png");
+}
+
+
+#irgr-paper-img {
+  background-image: url("../images/irgr_paper_background.png");  
+}
+
+#propara-paper-img {
+  background-image: url("../images/propara_paper_background.png");   
 }
